syntax = "proto3";

package auth;

service AuthService {
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool   valid    = 1;
  string username = 2;  // s√≥lo si valid=true
  string error    = 3;  // mensaje si valid=false
}
